--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -31,6 +31,7 @@
 <script type="text/javascript" src="{% static 'rx/js/jquery.sticky.js' %}"></script>
 <script type="text/javascript" src="{% static 'rx/js/underscore.js' %}"></script>
 <script type="text/javascript" src="{% static 'rx/js/jquery.stickysectionheaders.js' %}"></script>
+<script type="text/javascript" src="{% static 'rx/js/jsonselect.js' %}"></script>
 
 {% block header %}{% endblock %}
 
