--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -18,9 +18,21 @@
 
 {% block content %}
 
-<style>
+<script type="text/javascript">
+	var grouper1 = 0,
+		sorter1  = 1,
+		chem1    = 'All',
+		grouper2 = 0,
+		sorter2  = 1,
+		chem2    = 'All',
+		grouper3 = 0,
+		sorter3  = 1,
+		chem3    = 'All'
+		;
+	
 
-</style>
+
+</script>
 
 
 
@@ -125,9 +137,13 @@
 
 <div class="vizblocklock1">
 <h5>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h5>
-	<div id="vizblock1"></div>
+	<div id="vizblock1">
+		<select id="drug_drop1"></select>
+<a href="" onclick="return false;" id="group_button1" class="chart_button_left">Group</a>
+<a href="" onclick="return false;" id="sort_button1" class="chart_button_right">Sort</a><br>
+	</div>
 	<br>
-This graph shows the average monthly rate antidepressants are prescribed by GPs in Northern Ireland. Each bar represents a group based on a GP's local level of economic deprivation. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per 1,000 registered patients per month. Hovering over the graph shows how Northern Ireland compares to GPs in England and Wales. Click to pause the animation.
+This graph shows the average monthly rate antidepressants are prescribed by GPs in Northern Ireland. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per 1,000 registered patients per month.
 </div>
 
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar_data1.js' %}"></script>
@@ -215,9 +231,14 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 
 <div class="vizblocklock2">
 <h5>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h5>
-	<div id="vizblock2"></div>
+	<div id="vizblock2">
+		<select id="drug_drop2"></select>
+		<a href="" onclick="return false;" id="group_button2" class="chart_button_left">Group</a>
+		<a href="" onclick="return false;" id="sort_button2" class="chart_button_right">Sort</a><br>
+
+	</div>
 	<br>
-The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ireland, grouped by GPs' local level of economic deprivation. Hover over bars to see comparisons with GPs in England and Wales. Click to pause the animation.
+The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ireland.
 </div>
 
 
