--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -136,14 +136,14 @@
 
 
 <div class="vizblocklock1">
-<h5>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h5>
+<h4>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h4>
 	<div id="vizblock1">
 		<select id="drug_drop1"></select>
 <a href="" onclick="return false;" id="group_button1" class="chart_button_left">Group</a>
 <a href="" onclick="return false;" id="sort_button1" class="chart_button_right">Sort</a><br>
 	</div>
 	<br>
-This graph shows the average monthly rate antidepressants are prescribed by GPs in Northern Ireland. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per 1,000 registered patients per month.
+This graph shows the average monthly rate antidepressants are prescribed by GPs in Northern Ireland. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per 1,000 registered patients per month. Click GROUP to toggle GPs by local deprivation levels. SORT moves bars for comparison within deprivation groups or countries. The TOP DRUG bar shows how the current drug compares to the maximum antidepressant prescription rate.
 </div>
 
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar_data1.js' %}"></script>
@@ -230,7 +230,7 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 
 
 <div class="vizblocklock2">
-<h5>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h5>
+<h4>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h4>
 	<div id="vizblock2">
 		<select id="drug_drop2"></select>
 		<a href="" onclick="return false;" id="group_button2" class="chart_button_left">Group</a>
@@ -238,7 +238,7 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 
 	</div>
 	<br>
-The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ireland.
+The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ireland. Click GROUP to toggle GPs by local deprivation levels. SORT moves bars for comparison within deprivation groups or countries. The TOP DRUG bar shows how the current drug compares to the maximum anti-anxiety prescription rate.
 </div>
 
 
