--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -274,15 +274,19 @@ td a:hover{
 .info{
 	font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
 	font-size: 15px;
-	color:black;
-	vertical-align: super;
-	cursor: pointer;
-	z-index: 99999990;
+	color:#800000;
 }
 
 .h_break{
 	clear:left;
 }
 
-
+.help_dialog{
+	display:block;
+	margin:0 auto;
+	max-width: 750px;
+	font-family:'Lora',"Times New Roman", serif;
+	font-size:12px;
+	color:#888888;
+}
 
