--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -81,7 +81,7 @@
 				</div>
 				<span class="deprived_mini" >
 				{% if gp_info.qof > 0 %}
-				&nbsp;{{gp_info.qof|percentize}}%<span style="margin-left:-5px;" class="info" >*</span> 
+				&nbsp;{{gp_info.qof|percentize}}%<span class="info" >*</span> 
 				{% else %}
 				NA<span class="info" >*</span> 
 				{% endif %}
@@ -137,7 +137,7 @@
 			<td></td>
 			<td><span class="rx_writ">Prescriptions</span></td>
 		
-			<td class="over_hd" colspan="3">Prescription Rate (Defined Daily Doses)<span style="margin-left:-5px;" class="info" >*</span> </td>
+			<td class="over_hd" colspan="3">Prescription Rate (Defined Daily Doses)**</td>
 		</tr>
 		<tr class="lower_th">
 			<th class="rx_chem">Drug</th>
