--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -280,12 +280,12 @@ td a:hover{
 	clear:left;
 }
 
-.help_dialog{
+#help_dialog{
 	display:block;
 	margin:0 auto;
 	max-width: 750px;
 	font-family:'Lora',"Times New Roman", serif;
-	font-size:10px;
+	font-size:12px;
 	color:#888888;
 }
 
