--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -284,6 +284,9 @@ td a:hover{
 	display:block;
 	margin:0 auto;
 	max-width: 750px;
+	
+}
+#help_dialog p{
 	font-family:'Lora',"Times New Roman", serif;
 	font-size:12px;
 	color:#888888;
