--- a/prescript/templates/rx/redirect.html
+++ b/prescript/templates/rx/redirect.html
@@ -7,18 +7,18 @@
 </head>
 <body>
 
-<h4>The devil's in <a href="http://www.thedetail.tv"><img src="{% static 'rx/image/thedetaillogo.png' %}" display="inline" width="100px" ></a>s...</h4>
-<img src="{% static 'rx/image/devil.png' %}" align="left" width="150px" >
 
-<h1>Whoops!</h1>
+
+<h1>Whoops!<img src="{% static 'rx/image/devil.png' %}" align="left" width="80px" ></h1>
+
 
 <p>You've been redirected because your browser is incompatible with our site.</p>
 
-<h2>DON'T DESPAIR, PILGRIM!</h2>
+<h2>DON'T DESPAIR!</h2>
 <p class="ie">You can update your version of Internet Explorer <a href="http://windows.microsoft.com/en-us/internet-explorer/ie-11-worldwide-languages">here.</a></p>
 
 
-<p>Or update to one of the following browsers:</p>
+<p>OR update to another browser:</p>
 <img src="{% static 'rx/image/chrome.jpg' %}" align="left" width="40px" ><a class="good" href="https://www.google.com/intl/en/chrome/browser/">Click here to get Google Chrome.</a>
 <br><br>
 <img src="{% static 'rx/image/safari.png' %}" align="left" width="40px" ><a class="good" href="http://support.apple.com/downloads/#safari">Mac? Get Apple Safari here.</a>
