2-4-13 index hr etc

--- a/prescript/static/rx/css/template.css
+++ b/prescript/static/rx/css/template.css
@@ -437,3 +437,17 @@ td.warn_head{
   padding:5px;
   line-height: 75%;
 }
+
+
+
+hr.separated {
+    margin:40px auto;
+    width:80%;
+    border: 0;
+    height: 0; /* Firefox... */
+    box-shadow: 0 0 10px 1px black;
+}
+hr.separated:after {  /* Not really supposed to work, but does */
+    content: "\00a0";  /* Prevent margin collapse */
+}
+
