--- a/prescript/static/rx/css/template.css
+++ b/prescript/static/rx/css/template.css
@@ -451,3 +451,11 @@ hr.separated:after {  /* Not really supposed to work, but does */
     content: "\00a0";  /* Prevent margin collapse */
 }
 
+hr.less_separated{
+    margin:20px auto;
+    width:80%;
+    height: 12px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(0,0,0,0.5);
+
+}
